--- a/resources/mobile.css
+++ b/resources/mobile.css
@@ -99,14 +99,9 @@ aside {
 	padding: 0.5em 0;
 }
 
-aside .dropdown:not( :last-child ),
+aside .dropdown,
 #p-namespaces span {
 	padding-right: 1em;
-}
-
-.dropdown-menu-aside {
-	left: -100%;
-	right: auto;
 }
 
 /* Main content
